manifests/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: "challengespace"
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: idboubacar/challenge-semestre2-gateway-api
        imagePullPolicy: Always
      ports:
        - containerPort: 8000
