manifests/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: "challengespace"
  labels:
    name: gateway
    app: gateway
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: gateway
