manifests/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/connection-draining: "true"
spec:
  tls:
    - secretName: challengesecret
  rules:
  - host: api.challengecup.fr
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8000




# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: gateway
#   namespace: ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     cert-manager.io/cluster-issuer: selfsigned
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"    

# spec:
#   # tls:
#   #   - secretName: challengesecret
#   rules:
#   - host: api.challengecup.fr
#     http:
#       paths:
#       - path: /api
#         pathType: Prefix
#         backend:
#           service:
#             name: gateway
#             port:
#               number: 80
